# bayes-consistency

./: .env.template  .gitignore  README.md  analysis.ipynb  bayes_bot.py  debug_questions.py  experiment_framework.py  experiment_pipelines.py  metaculus_conditionals_2026-03.csv  package-lock.json  package.json  pyproject.toml  requirements.txt  run_trial.py  streamlit_app.py
results/: llm_forecasts_conditionals_first.csv  llm_forecasts_conditionals_first_full.json  llm_forecasts_conditionals_first_kl_projected.csv  llm_forecasts_gpt4o_mini_baseline.csv  llm_forecasts_gpt4o_mini_baseline.json  llm_forecasts_joint_prompt.csv  llm_forecasts_joint_prompt_full.json  llm_forecasts_kl_projected.csv  llm_forecasts_opus_oracle.csv  llm_forecasts_opus_oracle_full.json  llm_forecasts_projected.csv  llm_forecasts_recursive_causal.csv  llm_forecasts_recursive_causal_full.json  llm_forecasts_recursive_logodds.csv  llm_forecasts_recursive_logodds_full.json  llm_forecasts_separate_research.csv  llm_forecasts_separate_research_full.json  llm_forecasts_spread_aware.csv  llm_forecasts_spread_aware_full.json
scripts/: debug_questions.py  run_trial.py
src/: bayes_bot.py  experiment_framework.py  experiment_pipelines.py  main.py
tests/: test_bayes_bot.py
